crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/return_parameter/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
   ╭─[input.sol:5:52]
   │
 5 │     function f() public pure returns (uint a, uint a) {}
   │                                                    ┬  
   │                                                    ╰── Error occurred here.
───╯
